module12/istio-spec-http.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: service1
  namespace: httpserver
spec:
  gateways:
    - service1
  hosts:
    - "*"
  http:
    - match:
        - port: 80
      route:
        - destination:
            host: service1.httpserver.svc.cluster.local
            port:
              number: 9090
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: service1
  namespace: httpserver
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - "*"
      port:
        name: http
        number: 80
        protocol: HTTP
