module12/istio-spec.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: service0
  namespace: httpserver
spec:
  gateways:
    - service0
  hosts:
    - lml-cncamp.izaodao.com
  http:
    - match:
      - uri:
          prefix: /service0/
      rewrite:
        uri: /
      route:
        - destination:
            host: service0.httpserver.svc.cluster.local
            port:
              number: 9090
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: service0
  namespace: httpserver
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - lml-cncamp.izaodao.com
      port:
        name: https
        number: 443
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: service0-credential
